# telegram_clicker

./: pyproject.toml
auto_clicker/: config.py  main.py
