[tool.poetry]
name = "auto_clicker"
version = "0.1.0"
description = ""
authors = ["Patryk Laskowski <patryk.laskowski@stxnext.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
opencv-python = "^4.10.0.84"
pyautogui = "^0.9.54"
mss = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
